# gtravyl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: typecheck.yml
docs/source/: api.rst  conf.py  example.rst  index.rst
src/gtravyl/: __init__.py
tests/: test_basic.py
