[project]
name = "gtravyl"
version = "0.1.6"
description = "A simple to use library for finding the shortest path in a grid."
readme = "README.md"
authors = [
    { email = "csumnicht@berkeley.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "sphinx>=9.0.4",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=9.0.4",
    "sphinx-automodapi>=0.22.0",
]
